--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2
  jobs
    build
-     docker:
+     docker
        - image: circleci/ruby:2.4.1
-     steps:
+     steps
        - checkout
        - run: echo "A first hello"
